# pyflexplot

./: .bumpversion.cfg  .copier-answers.yml  .gitignore  .mch-ci.yml  .pre-commit-config.yaml  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  HISTORY.md  Jenkinsfile  LICENSE  MANIFEST.in  Makefile  Makefile.conda.mk  Makefile.pip-venv.mk  Pipfile  README.bumpversion.rst  README.md  README.meteoswiss  README.meteoswiss.md  README.meteoswiss.rst  README.rst  USAGE.md  USAGE.rst  VERSION  data  dev-environment.yml  dev-requirements.in  environment.yml  find_py.sh  find_py_toml.sh  modules.kesch.env  mypy.ini  pyproject.toml  requirements-dev.hard.kesch.txt  requirements-dev.soft.txt  requirements.flexible.txt  requirements.hard.kesch.txt  (+19 more)
.github/: ISSUE_TEMPLATE.md
.github/workflows/: pre-commit.yml
cartopy_data/shapefiles/natural_earth/cultural/: ne_110m_populated_places.dbf
docs/: Makefile  conf.py  documentation.inactive  index.rst  installation.rst  make.bat  modules.rst  usage.rst
examples/: create_deterministic_plots.sh
infrastructure/aws/: .terraform.lock.hcl  ecr.tf  main.tf  variables.tf
infrastructure/aws/tfvars/: depl.tfvars  devt.tfvars  prod.tfvars
jenkins/: JenkinsJobPR  Jenkinsfile
old_config/: mypy.ini
pyflexplot/: __init__.py
requirements/: build.txt  dev-pinned.kesch.txt  dev-pinned.tsa.txt  dev-pinned.txt  dev-requirements.in  dev-requirements.txt  dev-unpinned.txt  environment.yml  main-pinned.kesch.txt  requirements.in  requirements.txt  requirements.yml  run-pinned.tsa.txt  run-pinned.txt  setup-ordered.txt  test-unpinned.txt  tox-pinned.txt  tox-requirements.in  tox-requirements.txt  tox-unpinned.txt
scripts/: animate.sh  create_composite_plot.sh
src/: test_fail_precommit.py
src/pyflexplot/: __init__.py  attr.py  awslambda.py  boxed_plot.py  cartopy_data  cli.py  cli_preset.py  cli_utils.py  config.py  coord_trans.py  data.py  dimensions.py  examples.py  exceptions.py  field_specs.py  fix_nc_input.py  fld_specs.py  flexplot.py  flexplotter.py  formatting.py  input.py  io.py  io.py.orig  io_meta_data.py  logging.py  map_axes.py  meta_data.py  nc_meta_data.py  output.py  plot.py  plot_elements.py  plot_layouts.py  plot_lib.py  plot_types.py  plot_utils.py  plots.py  plotter.py  preset.py  pydantic.py  pyflexplot.py  (+13 more)
src/pyflexplot/cli/: __init__.py  cli.py  click.py  main.py  preset.py  preset_click.py  session
src/pyflexplot/config/: base_settings.py  service_settings.py  settings.yaml
src/pyflexplot/data/presets/: cosmo1.toml  cosmo1_affected_area.toml  cosmo1_concentration.toml  cosmo1_deposition.toml  cosmo1_deterministic.toml  cosmo1_deterministic_affected_area.toml  cosmo1_deterministic_concentration.toml  naz_det.toml  (+9 more)
src/pyflexplot/data_transformation/: rotated_pole.py
src/pyflexplot/input/: __init__.py  data.py  field.py  fix_nc_input.py  meta_data.py  nc_meta_data.py  read_fields.py  species.py
src/pyflexplot/plotting/: __init__.py  bbox.py  boxed_plot.py  coord_trans.py  domain.py  map_axes.py  proj_bbox.py  projs.py  ref_dist_indicator.py  session  text_box_axes.py
src/pyflexplot/s3/: s3.py
src/pyflexplot/setups/: __init__.py  base_setup.py  dimensions.py  files_setup.py  layout_setup.py  model_setup.py  plot_panel_setup.py  plot_setup.py  setup.py  setup_file.py  utils.py
src/pyflexplot/utils/: __init__.py  dataclasses.py  datetime.py  exceptions.py  formatting.py  logging.py  pydantic.py  session  summarize.py  typing.py  wrappers.py
src/pytrajplot/: __init__.py  cli.py  main.py
src/srtools/: __init__.py  crop_netcdf.py
src/srutils/: __init__.py  click.py  dataclasses.py  datetime.py  dict.py  exceptions.py  format.py  geo.py  iter.py  main.py  paths.py  pdf.py  plotting.py  session  str.py  testing.py  various.py  varname.py
src/tools/: crop_netcdf.py  session
src/words/: __init__.py  exceptions.py  session  test.py  utils.py  word.py  words.py
tests/: test_pyflexplot.py  test_utils.py
tests/fast/pyflexplot/: session  test_config.py  test_data.py  test_dimensions.py  test_ensemble_fields.py  test_field_specs.py  test_field_time_properties.py  test_fld_specs.py  test_meta_data.py  test_plot_lib.py  test_plot_utils.py  test_setup.py  test_text_box_axes.py  test_var_specs.py
tests/fast/srutils/: session
tests/fast/test_pyflexplot/: test_dimensions.py
tests/fast/test_srutils/: __init__.py
tests/fast/test_words/: __init__.py  test_test.py  test_translated_word.py  test_translated_words.py
tests/fast/words/: session  test_format.py  test_test.py  test_translated_word.py  test_translated_words.py
tests/medium/pyflexplot/: session
tests/pyflexplot/: session  test_cli.py  test_data.py  test_field_specs.py  test_io.py  test_plot.py  test_plot_summarize.py  test_plot_utils.py  test_plotter.py  test_specs.py  test_utils.py  test_var_specs.py  utils.py
tests/pyflexplot/io/: data  io_utils.py  test_field_specs.py  test_read_field.py  test_read_field_ensemble.py  utils.py
tests/pyflexplot/test_io/: flexpart_cosmo-1_case2.crop.nc  flexpart_cosmo-1_case2.nc  grid_conc_20190727120000_000.crop.nc  grid_conc_20190727120000_000.nc  grid_conc_20190727120000_001.crop.nc  grid_conc_20190727120000_001.nc  grid_conc_20190727120000_005.crop.nc  grid_conc_20190727120000_005.nc  grid_conc_20190727120000_010.crop.nc  grid_conc_20190727120000_010.nc  grid_conc_20190727120000_015.nc  grid_conc_20190727120000_020.nc
tests/slow/pyflexplot/: session  test_plot_summarize.py
tests/srutils/: session  test_to_varname.py
tests/srutils/str/: test_to_varname.py
tests/words/: session  test_format.py  test_test.py  test_translated_word.py  test_translated_words.py  test_word.py  test_words.py  utils.py
tests/words/utils/: test_to_varname.py
tests/words/word/: test_contexts.py  test_format.py  test_main.py  test_variants.py
tools/: README  count_loc.sh  find_py_toml.sh  run-mypy.sh  setup_env.sh  setup_miniconda.sh  test_opr_plots.sh  vim-session
various/: flexpart_cosmo_species.txt  flexpart_ifs_species.txt  flexpart_ifs_species_nofill.txt  rasterization_file_sizes.nb.py
(+448 files in other folders)
