
# Note: Setup of bumpversion resides in ``.bumpversion.cfg`` because bumpversion
#       rewrites its setup file (``.bumpversion.cfg`` or ``setup.cfg``), thereby
#       reformatting it and removing all comments.

[metadata]
name = pyflexplot
version = 0.1.1
description = PyFlexPlot contains Python scripts to plot FLEXPART NetCDF output
description-file =
    README.rst
    HISTORY.rst
author = Stefan Ruedisuehli
author_email = stefan.ruedisuehli@env.ethz.ch
keywords = pyflexplot
url = https://github.com/ruestefa/pyflexplot
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
package_dir =
    = src
packages = find:
test_suite =
    tests
requires-python = >= 3.7
include_package_data = True
zip_safe = False
setup_requires =
install_requires =
    attrs
    Cartopy # !! requires non-Python dependencies 'geos' and 'proj'!
    Click >= 6.0
    geopy
    matplotlib
    netCDF4
    numpy
    pillow >= 6.2.0
    scipy
test_requires =
    pytest

[options.entry_points]
console_scripts =
    pyflexplot = pyflexplot.cli:cli
    crop-netcdf = srtools.crop_netcdf:main

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length = 88
ignore =
    E111,E114,  # indentation is not a multiple of four
    E129  # visually indented line with same indent as next logical line

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ["setup.py"]
testpaths = tests
